gtk/sass/3.18/_3rd-party.scss
/* ... */
// draw underscores
@each $along_side, $opp_side in $orientation {
  .#{$along_side} .budgie-panel {
    WnckTasklist .button {
      border: 2px solid transparent;
      &:hover {
        border-#{$along_side}: 2px solid gtkalpha($inverted_fg_color, 0.4);
      }
      &:active,
      &:checked {
        border-#{$along_side}: 2px solid $selected_bg_color;
      }
    }

    .launcher {
      border: 2px solid transparent;
      &:hover {
        border-#{$along_side}: 2px solid gtkalpha($inverted_fg_color, 0.4);
      }
      &:active,
      &:checked {
        border-#{$along_side}: 2px solid $selected_bg_color;
      }
    }
  }
}

// draw underscores and dots
@each $along_side, $_dot in (top, top),
                            (bottom, bottom),
                            (left, left),
                            (right, right) {
  .#{$along_side} .budgie-panel {
    .unpinned .launcher,
    .pinned .launcher.running {
      border: 2px solid transparent;
      border-image: -gtk-scaled(url("assets/running-dot-#{$_dot}.png"),
                                url("assets/running-dot-#{$_dot}@2.png"))
                    2 / 2px;
      &:hover,
      &:active,
      &:checked {
        border-#{$along_side}: 2px solid $selected_bg_color;
        border-image: none;
      }
    }
  }
}

// show-desktop styling
.budgie-panel ShowDesktopApplet {
  > .button.flat {
    padding: 0.4em 1em;
    border-radius: 0;
    outline-color: transparent;
    color: $inverted_fg_color;
    &:hover {
      color: $selected_fg_color;
      background-color: transparent;
      background-image: none;
    }
    &:active  { color: $selected_fg_color; }
    &:checked { // dim icon when checked
      color: $insensitive_inverted_fg_color;
      background-color: transparent;
      background-image: none;
      &:hover {
        color: $selected_fg_color;
        background-color: transparent;
        background-image: none;
      }
    }
  }
}

// main menu styling
.budgie-menu {
  border-radius: 2px;
  background-color: $secondary_base_color;

  GtkScrolledWindow,
  .list,
  .list-row,
  .scrollbar.trough { // reset styling
    border: none;
    background: none;
    box-shadow: none;
  }

  .list-row { // reset background
    &, &.activatable {
      background-image: none;
      background-color: $secondary_base_color;
      color: $secondary_fg_color;
      transition: none;
    }
    &:hover,
    &.activatable:hover {
      background-image: none;
      background-color: $secondary_base_color;
      color: $fg_color;
      transition: none;
    }
  }

  GtkScrolledWindow .undershoot {
    &.top { @include undershoot(top, $secondary_base_color); }
    &.bottom { @include undershoot(bottom, $secondary_base_color); }
    &.left { @include undershoot(left, $secondary_base_color); }
    &.right { @include undershoot(right, $secondary_base_color); }
  }
}
/* ... */

